# gpt-from-scratch

./: .gitignore  gpt_dev.ipynb  gpt_train.ipynb  play.ipynb  pyproject.toml  readme.md
bigram/: bigram.py  bigram_generate.py  bigram_train.py
data/tiny_shakespeare/: merges.txt
gpt/: generate.py  gpt.py  train.py
notebooks/03_gpt/: gpt_dev.ipynb
notebooks/03_gpt/.ipynb_checkpoints/: gpt_dev-checkpoint.ipynb
scripts/: generate_cli.py  gpt_train.py  tokenize.py  train_bpe.py
src/gpt/: model.py  prepare.py  tokenizer.py
src/tokenizer/: bpe.py
