[project]
name = "deep-learning-from-scratch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "regex",       # tokenizer/bpe.py
    "tqdm",        # tokenizer + training loops
    "datasets",    # scripts that pull FineWebEdu
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] 